--- a/CyEngine/CyEngine.vcxproj
+++ b/CyEngine/CyEngine.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="src\generated\MeshComponent.gen.h" />
     <ClInclude Include="src\generated\Object.gen.h" />
     <ClInclude Include="src\generated\PlaneObject.gen.h" />
+    <ClInclude Include="src\generated\Scene.gen.h" />
     <ClInclude Include="src\generated\SceneObject.gen.h" />
     <ClInclude Include="src\generated\String.gen.h" />
     <ClInclude Include="src\generated\Transform.gen.h" />
@@ -693,6 +694,7 @@
     <ClCompile Include="src\generated\MeshComponent.gen.cpp" />
     <ClCompile Include="src\generated\Object.gen.cpp" />
     <ClCompile Include="src\generated\PlaneObject.gen.cpp" />
+    <ClCompile Include="src\generated\Scene.gen.cpp" />
     <ClCompile Include="src\generated\SceneObject.gen.cpp" />
     <ClCompile Include="src\generated\String.gen.cpp" />
     <ClCompile Include="src\generated\Transform.gen.cpp" />
