Handful of stuff after returning: - Arrays now support different kinds of allocation, default, lazy and none - Started working on meta data for assets - Updated build tool so that it allows for multiple classes per file - Started content browser - Also did some git ignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ CyEngine/tools/CyEngineBuildTool/CyEngine.35776e3f/
 *.user
 *.gen.h
 *.gen.cpp
-*.vcxproj
+# *.vcxproj
 *.vcxproj.filters
 */imgui.ini
+CyEngine/.idea/
